--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,11 @@
     <string name="previous">Previous</string>
     <string name="next">Next</string>
     <string name="profile">Profile</string>
+    <string name="email">Email</string>
+    <string name="age">Age</string>
+    <string name="height">Height(cm)</string>
+    <string name="weight_kg">Weight(kg)</string>
+    <string name="blood_group">Blood Group</string>
+    <string name="update_details">Update Details</string>
+    <string name="sign_out">Sign Out</string>
 </resources>
