navigation drawer added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,4 +86,28 @@
     <string name="calender_key">%s-%s-%s</string>
     <string name="time_slot_key">%s:%s</string>
     <string name="no_slot_available">No Slot Available</string>
+    <string name="profile_icon">profile_icon</string>
+    <string name="drawable_app_logo">drawable_app_logo</string>
+    <string name="app_slogan">Our excellent care is our specialty</string>
+    <string name="home">Home</string>
+    <string name="account">Account</string>
+    <string name="appointments">Appointments</string>
+    <string name="communicate">Communicate</string>
+    <string name="communication">Communication</string>
+    <string name="share">Share</string>
+    <string name="feedback">Feedback</string>
+    <string name="support">Support</string>
+    <string name="logout">Logout</string>
+    <string name="about_us">About Us</string>
+    <string name="open_nav">Open Navigation Drawer</string>
+    <string name="close_nav">Close Navigation Drawer</string>
+    <string name="share_app">Hey, Found this amazing app providing seamless appointment scheduling with doctors across all medical
+                            specialities.\n\nDownload the app by clicking on this link: \nhttps://drive.google.com/file/d/1LU_Fbxn5MFkDr48EgV4QaXm1eSVL0Sl4/view?usp=sharing</string>
+    <string name="doctorimage">doctorImage</string>
+    <string name="payment_s">Payment: %s</string>
+    <string name="appointment_no_s">Id: %s</string>
+    <string name="date_s">Date: %s</string>
+    <string name="your_appointments">Your Appointments</string>
+    <string name="photo_no_appointment">Photo No appointment</string>
+    <string name="no_appointment_found">No Appointment Found</string>
 </resources>
